--- a/ApqDBManager/ApqDBManager/Forms/FileUp.resx
+++ b/ApqDBManager/ApqDBManager/Forms/FileUp.resx
@@ -279,7 +279,7 @@
         b29sIFNlcmllcy4=
 </value>
   </data>
-  <metadata name="_Servers.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>361, 18</value>
+  <metadata name="_Sqls.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>929, 17</value>
   </metadata>
 </root>
