--- a/ApqDBManager/ApqDBManager/Forms/SrvsMgr/DBC.resx
+++ b/ApqDBManager/ApqDBManager/Forms/SrvsMgr/DBC.resx
@@ -450,4 +450,7 @@
         AAD/8AAAD/8AAP/8AAA//wAA//8AAP//AAD///AP//8AAP///////wAA
 </value>
   </data>
+  <metadata name="Sqls.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>128, 15</value>
+  </metadata>
 </root>
