--- a/ApqDBManager/ApqDBManager/Forms/SrvsMgr/DBC.resx
+++ b/ApqDBManager/ApqDBManager/Forms/SrvsMgr/DBC.resx
@@ -483,4 +483,7 @@
   <metadata name="scUpdate.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>0, 0</value>
   </metadata>
+  <metadata name="sfd.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>295, 15</value>
+  </metadata>
 </root>
