--- a/ApqDBManager/ApqDBManager/Forms/SrvsMgr/DBServer.resx
+++ b/ApqDBManager/ApqDBManager/Forms/SrvsMgr/DBServer.resx
@@ -192,7 +192,7 @@
   <metadata name="computerTypeBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>343, 64</value>
   </metadata>
-  <metadata name="srvsMgr_XSD.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="DBServer_XSD.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>32, 58</value>
   </metadata>
   <metadata name="computerBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
